Fix contrast problem for warning badges

--- a/src/app/atoms/interactive-badge/interactive-badge.component.scss
+++ b/src/app/atoms/interactive-badge/interactive-badge.component.scss
@@ -27,6 +27,6 @@
   
 }
 
-.bg-warning a{
+.bg-warning{
   color: (var(--bs-black));
 }
